Remove IMO unnecessary restriction to tags and physical albums for storing scroll position. Works nicely with searches.

BUG: 229795